GNOME Bugzilla – Bug 793855
libgdm: "Fix" a memory leak
Last modified: 2018-02-26 21:51:31 UTC
See patch.
Created attachment 368959 [details] [review] libgdm: "Fix" a memory leak The gdm_available_sessions_map hash table is set up with a value-free function that frees the struct itself, but not its contents. Of course elements are never removed from the map, so this fix doesn't matter in practice.
Review of attachment 368959 [details] [review]: sure.
Attachment 368959 [details] pushed as 1e36e8d - libgdm: "Fix" a memory leak