libgdm: "Fix" a memory leak

The gdm_available_sessions_map hash table is set up with a value-free
function that frees the struct itself, but not its contents.

Of course elements are never removed from the map, so this fix doesn't
matter in practice.

https://bugzilla.gnome.org/show_bug.cgi?id=793855